--- a/templates/planner/updatePlan.html
+++ b/templates/planner/updatePlan.html
@@ -240,7 +240,7 @@
             <input type="submit" value="작성완료" id="sub">
         </div>
     </div>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=80a7d4591772bcd16ef4af7366dded4e&libraries=clusterer"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={appkey}&libraries=clusterer"></script>
     <script>
         var mapContainer = document.getElementById('map'), // 지도를 표시할 div
             mapOption = {
