--- a/templates/planner/planDetail.html
+++ b/templates/planner/planDetail.html
@@ -187,7 +187,7 @@
     </div>
 
     <script type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=80a7d4591772bcd16ef4af7366dded4e"></script>
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey={appkey}"></script>
     <script>
         var mapContainer = document.getElementById('map'), // 지도를 표시할 div
             mapOption = {
